--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
